tests/NormalTests/paczka1/fuzzy1/71283047.err
Error in line 18: Osb S145 17,99
Error in line 20: Oq2xRWA7wH A18 79,1
Error in line 23: Oq2xRWA7wH A524 48,9
Error in line 25: NhqlXOZhU S145 84,3
Error in line 26: Osb S145 84,0
Error in line 27: NhqlXOZhU S792 58,0
